add 'report' css class

--- a/style.css
+++ b/style.css
@@ -59,6 +59,26 @@ body {
     box-shadow: 15px 15px 2px 1px rgb(40, 54, 97);
 }
 
+.report {
+    background-color: black;
+	text-align: left;
+    padding-left: 10px;
+	margin-left: 7%;
+	margin-right: 7%;
+	margin-bottom: 3%;
+    font-family: sans-serif;
+}
+
+.report p {
+    font-size: 22px;
+    font-family: serif;
+}
+
+.report a {
+    font-size: 22px;
+    font-family: sans-serif;
+}
+
 code { /* There is an html tag <code>*/
 	color: rgb(0, 255, 0);
 	font-family: "Lucida Console", "Courier New", monospace;
